--- a/work/test.ipynb
+++ b/work/test.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from docx import Document\n",
-    "from python_docx_replace import docx_replace"
+    "import re"
    ]
   },
   {
@@ -16,8 +16,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = 'template.docx'\n",
-    "doc = Document(file_path)"
+    "data = {\n",
+    "    'Date': '16/08/1995',\n",
+    "    'Voucher': 'PV-01/2025-001',\n",
+    "    'Payee': 'Agri Bio Multi Supply',\n",
+    "    'Ringgit': 'Ten Thousand Only',\n",
+    "    'Account1': '10101',\n",
+    "    'Particular1': 'Bank Charges',\n",
+    "    'Amount1': 'RM5,000.00',\n",
+    "    'Account2': '',\n",
+    "    'Particular2': '',\n",
+    "    'Amount2': '',\n",
+    "    'Account3': '',\n",
+    "    'Particular3': '',\n",
+    "    'Amount3': '',\n",
+    "    'Account4': '',\n",
+    "    'Particular4': '',\n",
+    "    'Amount4': '',\n",
+    "    'Account5': '',\n",
+    "    'Particular5': '',\n",
+    "    'Amount5': '',\n",
+    "    'Account6': '',\n",
+    "    'Particular6': '',\n",
+    "    'Amount6': '',\n",
+    "    'Account7': '',\n",
+    "    'Particular7': '',\n",
+    "    'Amount7': '',\n",
+    "    'Account8': '',\n",
+    "    'Particular8': '',\n",
+    "    'Amount8': '',\n",
+    "    'Total': 'RM5,000.00',\n",
+    "    'Method': 'Cheque RHB',\n",
+    "    'Reference': '000001'\n",
+    "}"
    ]
   },
   {
@@ -26,7 +57,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = doc.tables[0]"
+    "file_path = 'template.docx'\n",
+    "doc = Document(file_path)\n",
+    "table = doc.tables[0]\n",
+    "for row in table.rows:\n",
+    "    for item in row.cells:\n",
+    "        pattern = r'\\$\\{(.*?)\\}'\n",
+    "        result = re.findall(pattern, item.text)\n",
+    "        if result:\n",
+    "            key = result[0]\n",
+    "            value = data[key]\n",
+    "            for index, run in enumerate(item.paragraphs[0].runs):\n",
+    "                if index == 0:\n",
+    "                    run.text = value\n",
+    "                else:\n",
+    "                    run.text = ''\n",
+    "doc.save('output1.docx')"
    ]
   },
   {
@@ -35,373 +81,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rows = list(table.rows)"
+    "file_path = 'template.docx'\n",
+    "doc = Document(file_path)\n",
+    "table = doc.tables[0]\n",
+    "rows = table.rows\n",
+    "for row in rows:\n",
+    "    items = row.cells\n",
+    "    for item in items:\n",
+    "        pattern = r'\\$\\{(.*?)\\}'\n",
+    "        result = re.findall(pattern, item.text)\n",
+    "        if result:\n",
+    "            runs = item.paragraphs[0].runs\n",
+    "            for index, run in enumerate(runs):\n",
+    "                if index == 0:\n",
+    "                    key = result[0]\n",
+    "                    run.text = data[key]\n",
+    "                else:\n",
+    "                    run.text = ''\n",
+    "doc.save('output2.docx')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "支出传票\n",
-      "PAYMENT VOUCHER\n",
-      " \n",
-      "/\n",
-      " \n",
-      "BAUCAR BAYARAN\n",
-      "支出传票\n",
-      "PAYMENT VOUCHER\n",
-      " \n",
-      "/\n",
-      " \n",
-      "BAUCAR BAYARAN\n",
-      "支出传票\n",
-      "PAYMENT VOUCHER\n",
-      " \n",
-      "/\n",
-      " \n",
-      "BAUCAR BAYARAN\n",
-      "支出传票\n",
-      "PAYMENT VOUCHER\n",
-      " \n",
-      "/\n",
-      " \n",
-      "BAUCAR BAYARAN\n",
-      "支出传票\n",
-      "PAYMENT VOUCHER\n",
-      " \n",
-      "/\n",
-      " \n",
-      "BAUCAR BAYARAN\n",
-      "日期\n",
-      "Date / Tarikh\n",
-      "${\n",
-      "Date\n",
-      "}\n",
-      "支出传票\n",
-      "PAYMENT VOUCHER\n",
-      " \n",
-      "/\n",
-      " \n",
-      "BAUCAR BAYARAN\n",
-      "支出传票\n",
-      "PAYMENT VOUCHER\n",
-      " \n",
-      "/\n",
-      " \n",
-      "BAUCAR BAYARAN\n",
-      "支出传票\n",
-      "PAYMENT VOUCHER\n",
-      " \n",
-      "/\n",
-      " \n",
-      "BAUCAR BAYARAN\n",
-      "支出传票\n",
-      "PAYMENT VOUCHER\n",
-      " \n",
-      "/\n",
-      " \n",
-      "BAUCAR BAYARAN\n",
-      "支出传票\n",
-      "PAYMENT VOUCHER\n",
-      " \n",
-      "/\n",
-      " \n",
-      "BAUCAR BAYARAN\n",
-      "传票号码\n",
-      "Voucher \n",
-      "No. \n",
-      "/ \n",
-      "No. \n",
-      "Baucar\n",
-      "[\n",
-      "Voucher\n",
-      "]\n",
-      "付\n",
-      "Pay / Bayar kepada\n",
-      "[Payee]\n",
-      "[Payee]\n",
-      "[Payee]\n",
-      "[Payee]\n",
-      "[Payee]\n",
-      "[Payee]\n",
-      "银数\n",
-      "Dollar / Ringgit\n",
-      "[Ringgit]\n",
-      "[Ringgit]\n",
-      "[Ringgit]\n",
-      "[Ringgit]\n",
-      "[Ringgit]\n",
-      "[Ringgit]\n",
-      "会计科目\n",
-      "ACCOUNT / AKAUN\n",
-      "会计科目\n",
-      "ACCOUNT / AKAUN\n",
-      "摘要\n",
-      "PARTICULARS / PERKARA\n",
-      "摘要\n",
-      "PARTICULARS / PERKARA\n",
-      "摘要\n",
-      "PARTICULARS / PERKARA\n",
-      "摘要\n",
-      "PARTICULARS / PERKARA\n",
-      "金额\n",
-      "AMOUNT / AMAUN\n",
-      "[\n",
-      "Account1\n",
-      "]\n",
-      "[\n",
-      "Account1\n",
-      "]\n",
-      "[Particular1]\n",
-      "[Particular1]\n",
-      "[Particular1]\n",
-      "[Particular1]\n",
-      "[Amount1]\n",
-      "[\n",
-      "Account2\n",
-      "]\n",
-      "[\n",
-      "Account2\n",
-      "]\n",
-      "[Particular\n",
-      "2\n",
-      "]\n",
-      "[Particular\n",
-      "2\n",
-      "]\n",
-      "[Particular\n",
-      "2\n",
-      "]\n",
-      "[Particular\n",
-      "2\n",
-      "]\n",
-      "[Amount\n",
-      "2\n",
-      "]\n",
-      "[\n",
-      "Account3\n",
-      "]\n",
-      "[\n",
-      "Account3\n",
-      "]\n",
-      "[Particular\n",
-      "3\n",
-      "]\n",
-      "[Particular\n",
-      "3\n",
-      "]\n",
-      "[Particular\n",
-      "3\n",
-      "]\n",
-      "[Particular\n",
-      "3\n",
-      "]\n",
-      "[Amount\n",
-      "3\n",
-      "]\n",
-      "[\n",
-      "Account4\n",
-      "]\n",
-      "[\n",
-      "Account4\n",
-      "]\n",
-      "[Particular\n",
-      "4\n",
-      "]\n",
-      "[Particular\n",
-      "4\n",
-      "]\n",
-      "[Particular\n",
-      "4\n",
-      "]\n",
-      "[Particular\n",
-      "4\n",
-      "]\n",
-      "[Amount\n",
-      "4\n",
-      "]\n",
-      "[\n",
-      "Account5\n",
-      "]\n",
-      "[\n",
-      "Account5\n",
-      "]\n",
-      "[Particular\n",
-      "5\n",
-      "]\n",
-      "[Particular\n",
-      "5\n",
-      "]\n",
-      "[Particular\n",
-      "5\n",
-      "]\n",
-      "[Particular\n",
-      "5\n",
-      "]\n",
-      "[Amount\n",
-      "5\n",
-      "]\n",
-      "[\n",
-      "Account6\n",
-      "]\n",
-      "[\n",
-      "Account6\n",
-      "]\n",
-      "[Particular\n",
-      "6\n",
-      "]\n",
-      "[Particular\n",
-      "6\n",
-      "]\n",
-      "[Particular\n",
-      "6\n",
-      "]\n",
-      "[Particular\n",
-      "6\n",
-      "]\n",
-      "[Amount\n",
-      "6\n",
-      "]\n",
-      "[\n",
-      "Account7\n",
-      "]\n",
-      "[\n",
-      "Account7\n",
-      "]\n",
-      "[Particular\n",
-      "7\n",
-      "]\n",
-      "[Particular\n",
-      "7\n",
-      "]\n",
-      "[Particular\n",
-      "7\n",
-      "]\n",
-      "[Particular\n",
-      "7\n",
-      "]\n",
-      "[Amount\n",
-      "7\n",
-      "]\n",
-      "[\n",
-      "Account8\n",
-      "]\n",
-      "[\n",
-      "Account8\n",
-      "]\n",
-      "[Particular\n",
-      "8\n",
-      "]\n",
-      "[Particular\n",
-      "8\n",
-      "]\n",
-      "[Particular\n",
-      "8\n",
-      "]\n",
-      "[Particular\n",
-      "8\n",
-      "]\n",
-      "[Amount\n",
-      "8\n",
-      "]\n",
-      "合计\n",
-      "TOTAL / JUMLAH\n",
-      "合计\n",
-      "TOTAL / JUMLAH\n",
-      "合计\n",
-      "TOTAL / JUMLAH\n",
-      "合计\n",
-      "TOTAL / JUMLAH\n",
-      "合计\n",
-      "TOTAL / JUMLAH\n",
-      "合计\n",
-      "TOTAL / JUMLAH\n",
-      "[Total]\n",
-      "付款方式\n",
-      "Payment Method\n",
-      " / Cara pembayaran\n",
-      " \n",
-      "付款方式\n",
-      "Payment Method\n",
-      " / Cara pembayaran\n",
-      " \n",
-      "付款方式\n",
-      "Payment Method\n",
-      " / Cara pembayaran\n",
-      " \n",
-      "[\n",
-      "Method\n",
-      "]\n",
-      "参考编号\n",
-      "Reference\n",
-      " No. / \n",
-      "No. Rujukan\n",
-      "参考编号\n",
-      "Reference\n",
-      " No. / \n",
-      "No. Rujukan\n",
-      "[\n",
-      "Reference\n",
-      "]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for row in rows:\n",
-    "    cols = list(row.cells)\n",
-    "    for col in cols:\n",
-    "        paragraphs = col.paragraphs\n",
-    "        for paragraph in paragraphs:\n",
-    "            runs = paragraph.runs\n",
-    "            for run in runs:\n",
-    "                print(run.text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
+    "from python_docx_replace import docx_replace\n",
     "file_path = 'template.docx'\n",
-    "doc = Document(file_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "docx_replace(doc, Date='03/01/2025')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc.save('output.docx')"
+    "doc = Document(file_path)\n",
+    "docx_replace(doc, **data)\n",
+    "doc.save('output3.docx')"
    ]
   },
   {
