--- a/work/Create-Voucher/currency-to-word.ipynb
+++ b/work/Create-Voucher/currency-to-word.ipynb
@@ -2,164 +2,132 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 zero\n",
-      "1 one\n",
-      "2 two\n",
-      "3 three\n",
-      "4 four\n",
-      "5 five\n",
-      "6 six\n",
-      "7 seven\n",
-      "8 eight\n",
-      "9 nine\n",
-      "10 ten\n",
-      "11 eleven\n",
-      "12 twelve\n",
-      "13 thirteen\n",
-      "14 fourteen\n",
-      "15 fifteen\n",
-      "16 sixteen\n",
-      "17 seventeen\n",
-      "18 eighteen\n",
-      "19 nineteen\n",
-      "20 twenty\n",
-      "30 thirty\n",
-      "40 forty\n",
-      "50 fifty\n",
-      "60 sixty\n",
-      "70 seventy\n",
-      "80 eighty\n",
-      "90 ninety\n",
-      "100 one hundred\n",
-      "1000 one thousand\n",
-      "1000000 one million\n",
-      "1000000000 one billion\n",
-      "1000000000000 one trillion\n"
-     ]
-    }
-   ],
    "source": [
-    "for item in data.keys():\n",
-    "    print(item, num2words(item))"
+    "one = {\n",
+    "    0: '',\n",
+    "    1: 'one',\n",
+    "    2: 'two',\n",
+    "    3: 'three',\n",
+    "    4: 'four',\n",
+    "    5: 'five',\n",
+    "    6: 'six',\n",
+    "    7: 'seven',\n",
+    "    8: 'eight',\n",
+    "    9: 'nine',\n",
+    "    10: 'ten',\n",
+    "    11: 'eleven',\n",
+    "    12: 'twelve',\n",
+    "    13: 'thirteen',\n",
+    "    14: 'fourteen',\n",
+    "    15: 'fifteen',\n",
+    "    16: 'sixteen',\n",
+    "    17: 'seventeen',\n",
+    "    18: 'eighteen',\n",
+    "    19: 'nineteen'\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "amount = 69543521.11"
+    "ten = {\n",
+    "    2: 'twenty',\n",
+    "    3: 'thirty',\n",
+    "    4: 'forty',\n",
+    "    5: 'fifty',\n",
+    "    6: 'sixty',\n",
+    "    7: 'seventy',\n",
+    "    8: 'eighty',\n",
+    "    9: 'ninety'\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'11'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "str(amount).split('.')[-1]"
+    "power = {\n",
+    "    2: 'hundred',\n",
+    "    3: 'thousand',\n",
+    "    6: 'million',\n",
+    "    9: 'biliion',\n",
+    "    12: 'trillion'\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 \n",
-      "1 one\n",
-      "2 two\n",
-      "3 three\n",
-      "4 four\n",
-      "5 five\n",
-      "6 six\n",
-      "7 seven\n",
-      "8 eight\n",
-      "9 nine\n",
-      "10 ten\n",
-      "11 eleven\n",
-      "12 twelve\n",
-      "13 thirteen\n",
-      "14 fourteen\n",
-      "15 fifteen\n",
-      "16 sixteen\n",
-      "17 seventeen\n",
-      "18 eighteen\n",
-      "19 nineteen\n",
-      "20 twenty\n",
-      "30 thirty\n",
-      "40 forty\n",
-      "50 fifty\n",
-      "60 sixty\n",
-      "70 seventy\n",
-      "80 eighty\n",
-      "90 ninety\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for i in range(99):\n",
-    "    if i in data.keys():\n",
-    "        print(i, data[i])\n",
-    "    else:\n",
-    "        "
+    "num = 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "21 // 10 * 10"
+    "if num < 0:\n",
+    "    print('negative')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if num == 0:\n",
+    "    print('zero')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if num < 20:\n",
+    "    print(one[num])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if num < 100:\n",
+    "    print(ten[num // 10], one[num % 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if num < 1000:\n",
+    "    print(num // 100, 'hundred', ten[num % 100 // 10], one[num % 100 % 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
