--- a/work/Create-Voucher/currency-to-word.ipynb
+++ b/work/Create-Voucher/currency-to-word.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "one = {\n",
+    "num_to_word = {\n",
     "    0: '',\n",
     "    1: 'one',\n",
     "    2: 'two',\n",
@@ -26,18 +26,29 @@
     "    16: 'sixteen',\n",
     "    17: 'seventeen',\n",
     "    18: 'eighteen',\n",
-    "    19: 'nineteen'\n",
+    "    19: 'nineteen',\n",
+    "    20: 'twenty',\n",
+    "    30: 'thirty',\n",
+    "    40: 'forty',\n",
+    "    50: 'fifty',\n",
+    "    60: 'sixty',\n",
+    "    70: 'seventy',\n",
+    "    80: 'eighty',\n",
+    "    90: 'ninety',\n",
+    "    1000: 'thousand',\n",
+    "    1000000: 'million',\n",
+    "    1000000000: 'biliion',\n",
+    "    1000000000000: 'trillion'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ten = {\n",
-    "    0: '',\n",
+    "below_100 = {\n",
     "    2: 'twenty',\n",
     "    3: 'thirty',\n",
     "    4: 'forty',\n",
@@ -51,191 +62,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "power = {\n",
-    "    2: 'hundred',\n",
-    "    3: 'thousand',\n",
-    "    6: 'million',\n",
-    "    9: 'biliion',\n",
-    "    12: 'trillion'\n",
+    "above_100 = {\n",
+    "    1: 'thousand',\n",
+    "    2: 'million',\n",
+    "    3: 'biliion',\n",
+    "    4: 'trillion'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_to_word(num):\n",
+    "    num_digit = len(str(num))\n",
+    "    power = (num_digit - 1) // 3\n",
+    "    if num < 20:\n",
+    "        return below_20[num]\n",
+    "    elif num < 100:\n",
+    "        return ' '.join([below_100[num // 10], num_to_word(num % 10)])\n",
+    "    elif num < 1000:\n",
+    "        return ' '.join([num_to_word(num // 100), 'hundred', num_to_word(num % 100)])\n",
+    "    elif power < 5:\n",
+    "        return ' '.join([num_to_word(num // 1000 ** power), above_100[power], num_to_word(num % 1000 ** power)])\n",
+    "    else:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 zero\n",
-      "7 seven\n",
-      "14 fourteen\n",
-      "21 twenty one\n",
-      "28 twenty eight\n",
-      "35 thirty five\n",
-      "42 forty two\n",
-      "49 forty nine\n",
-      "56 fifty six\n",
-      "63 sixty three\n",
-      "70 seventy \n",
-      "77 seventy seven\n",
-      "84 eighty four\n",
-      "91 ninety one\n",
-      "98 ninety eight\n",
-      "105 one hundred five\n",
-      "112 one hundred twelve\n",
-      "119 one hundred nineteen\n",
-      "126 one hundred twenty six\n",
-      "133 one hundred thirty three\n",
-      "140 one hundred forty \n",
-      "147 one hundred forty seven\n",
-      "154 one hundred fifty four\n",
-      "161 one hundred sixty one\n",
-      "168 one hundred sixty eight\n",
-      "175 one hundred seventy five\n",
-      "182 one hundred eighty two\n",
-      "189 one hundred eighty nine\n",
-      "196 one hundred ninety six\n",
-      "203 two hundred three\n",
-      "210 two hundred ten\n",
-      "217 two hundred seventeen\n",
-      "224 two hundred twenty four\n",
-      "231 two hundred thirty one\n",
-      "238 two hundred thirty eight\n",
-      "245 two hundred forty five\n",
-      "252 two hundred fifty two\n",
-      "259 two hundred fifty nine\n",
-      "266 two hundred sixty six\n",
-      "273 two hundred seventy three\n",
-      "280 two hundred eighty \n",
-      "287 two hundred eighty seven\n",
-      "294 two hundred ninety four\n",
-      "301 three hundred one\n",
-      "308 three hundred eight\n",
-      "315 three hundred fifteen\n",
-      "322 three hundred twenty two\n",
-      "329 three hundred twenty nine\n",
-      "336 three hundred thirty six\n",
-      "343 three hundred forty three\n",
-      "350 three hundred fifty \n",
-      "357 three hundred fifty seven\n",
-      "364 three hundred sixty four\n",
-      "371 three hundred seventy one\n",
-      "378 three hundred seventy eight\n",
-      "385 three hundred eighty five\n",
-      "392 three hundred ninety two\n",
-      "399 three hundred ninety nine\n",
-      "406 four hundred six\n",
-      "413 four hundred thirteen\n",
-      "420 four hundred twenty \n",
-      "427 four hundred twenty seven\n",
-      "434 four hundred thirty four\n",
-      "441 four hundred forty one\n",
-      "448 four hundred forty eight\n",
-      "455 four hundred fifty five\n",
-      "462 four hundred sixty two\n",
-      "469 four hundred sixty nine\n",
-      "476 four hundred seventy six\n",
-      "483 four hundred eighty three\n",
-      "490 four hundred ninety \n",
-      "497 four hundred ninety seven\n",
-      "504 five hundred four\n",
-      "511 five hundred eleven\n",
-      "518 five hundred eighteen\n",
-      "525 five hundred twenty five\n",
-      "532 five hundred thirty two\n",
-      "539 five hundred thirty nine\n",
-      "546 five hundred forty six\n",
-      "553 five hundred fifty three\n",
-      "560 five hundred sixty \n",
-      "567 five hundred sixty seven\n",
-      "574 five hundred seventy four\n",
-      "581 five hundred eighty one\n",
-      "588 five hundred eighty eight\n",
-      "595 five hundred ninety five\n",
-      "602 six hundred two\n",
-      "609 six hundred nine\n",
-      "616 six hundred sixteen\n",
-      "623 six hundred twenty three\n",
-      "630 six hundred thirty \n",
-      "637 six hundred thirty seven\n",
-      "644 six hundred forty four\n",
-      "651 six hundred fifty one\n",
-      "658 six hundred fifty eight\n",
-      "665 six hundred sixty five\n",
-      "672 six hundred seventy two\n",
-      "679 six hundred seventy nine\n",
-      "686 six hundred eighty six\n",
-      "693 six hundred ninety three\n",
-      "700 seven hundred \n",
-      "707 seven hundred seven\n",
-      "714 seven hundred fourteen\n",
-      "721 seven hundred twenty one\n",
-      "728 seven hundred twenty eight\n",
-      "735 seven hundred thirty five\n",
-      "742 seven hundred forty two\n",
-      "749 seven hundred forty nine\n",
-      "756 seven hundred fifty six\n",
-      "763 seven hundred sixty three\n",
-      "770 seven hundred seventy \n",
-      "777 seven hundred seventy seven\n",
-      "784 seven hundred eighty four\n",
-      "791 seven hundred ninety one\n",
-      "798 seven hundred ninety eight\n",
-      "805 eight hundred five\n",
-      "812 eight hundred twelve\n",
-      "819 eight hundred nineteen\n",
-      "826 eight hundred twenty six\n",
-      "833 eight hundred thirty three\n",
-      "840 eight hundred forty \n",
-      "847 eight hundred forty seven\n",
-      "854 eight hundred fifty four\n",
-      "861 eight hundred sixty one\n",
-      "868 eight hundred sixty eight\n",
-      "875 eight hundred seventy five\n",
-      "882 eight hundred eighty two\n",
-      "889 eight hundred eighty nine\n",
-      "896 eight hundred ninety six\n",
-      "903 nine hundred three\n",
-      "910 nine hundred ten\n",
-      "917 nine hundred seventeen\n",
-      "924 nine hundred twenty four\n",
-      "931 nine hundred thirty one\n",
-      "938 nine hundred thirty eight\n",
-      "945 nine hundred forty five\n",
-      "952 nine hundred fifty two\n",
-      "959 nine hundred fifty nine\n",
-      "966 nine hundred sixty six\n",
-      "973 nine hundred seventy three\n",
-      "980 nine hundred eighty \n",
-      "987 nine hundred eighty seven\n",
-      "994 nine hundred ninety four\n"
+      "983123452346781 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty one\n",
+      "983123452346782 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty two\n",
+      "983123452346783 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty three\n",
+      "983123452346784 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty four\n",
+      "983123452346785 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty five\n",
+      "983123452346786 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty six\n",
+      "983123452346787 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty seven\n",
+      "983123452346788 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty eight\n"
      ]
     }
    ],
    "source": [
-    "for num in range(0, 1000, 7):\n",
-    "    if num == 0:\n",
-    "        print(num, 'zero')\n",
-    "        continue\n",
-    "    if num < 20:\n",
-    "        print(num, one[num])\n",
-    "        continue\n",
-    "    if num < 100:\n",
-    "        print(num, ten[num // 10], one[num % 10])\n",
-    "        continue\n",
-    "    if num < 1000:\n",
-    "        if num % 100 < 20:\n",
-    "            print(num, one[num // 100], 'hundred', one[num % 100])\n",
-    "        else:\n",
-    "            print(num, one[num // 100], 'hundred', ten[num % 100 // 10], one[num % 100 % 10])\n",
-    "        continue"
+    "for i in range(983123452346781, 983123452346789):\n",
+    "    value = num_to_word(i)\n",
+    "    print(i, value)"
    ]
   },
   {
@@ -269,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
