--- a/work/Create-Voucher/currency-to-word.ipynb
+++ b/work/Create-Voucher/currency-to-word.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_to_word = {\n",
+    "num_under_20 = {\n",
     "    0: '',\n",
     "    1: 'one',\n",
     "    2: 'two',\n",
@@ -26,29 +26,17 @@
     "    16: 'sixteen',\n",
     "    17: 'seventeen',\n",
     "    18: 'eighteen',\n",
-    "    19: 'nineteen',\n",
-    "    20: 'twenty',\n",
-    "    30: 'thirty',\n",
-    "    40: 'forty',\n",
-    "    50: 'fifty',\n",
-    "    60: 'sixty',\n",
-    "    70: 'seventy',\n",
-    "    80: 'eighty',\n",
-    "    90: 'ninety',\n",
-    "    1000: 'thousand',\n",
-    "    1000000: 'million',\n",
-    "    1000000000: 'biliion',\n",
-    "    1000000000000: 'trillion'\n",
+    "    19: 'nineteen'\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "below_100 = {\n",
+    "num_under_100 = {\n",
     "    2: 'twenty',\n",
     "    3: 'thirty',\n",
     "    4: 'forty',\n",
@@ -62,11 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "above_100 = {\n",
+    "num_above_1000 = {\n",
     "    1: 'thousand',\n",
     "    2: 'million',\n",
     "    3: 'biliion',\n",
@@ -76,57 +64,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def num_to_word(num):\n",
+    "def currency_to_word(num):\n",
     "    num_digit = len(str(num))\n",
     "    power = (num_digit - 1) // 3\n",
     "    if num < 20:\n",
-    "        return below_20[num]\n",
+    "        return num_under_20[num]\n",
     "    elif num < 100:\n",
-    "        return ' '.join([below_100[num // 10], num_to_word(num % 10)])\n",
+    "        return ' '.join([num_under_100[num // 10], currency_to_word(num % 10)])\n",
     "    elif num < 1000:\n",
-    "        return ' '.join([num_to_word(num // 100), 'hundred', num_to_word(num % 100)])\n",
+    "        return ' '.join([currency_to_word(num // 100), 'hundred', currency_to_word(num % 100)])\n",
     "    elif power < 5:\n",
-    "        return ' '.join([num_to_word(num // 1000 ** power), above_100[power], num_to_word(num % 1000 ** power)])\n",
-    "    else:\n",
-    "        return None"
+    "        return ' '.join([currency_to_word(num // 1000 ** power), num_above_1000[power], currency_to_word(num % 1000 ** power)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "983123452346781 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty one\n",
-      "983123452346782 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty two\n",
-      "983123452346783 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty three\n",
-      "983123452346784 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty four\n",
-      "983123452346785 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty five\n",
-      "983123452346786 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty six\n",
-      "983123452346787 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty seven\n",
-      "983123452346788 nine hundred eighty three trillion one hundred twenty three biliion four hundred fifty two million three hundred forty six thousand seven hundred eighty eight\n"
+      "123456789 one hundred twenty three million four hundred fifty six thousand seven hundred eighty nine\n",
+      "123456790 one hundred twenty three million four hundred fifty six thousand seven hundred ninety \n",
+      "123456791 one hundred twenty three million four hundred fifty six thousand seven hundred ninety one\n",
+      "123456792 one hundred twenty three million four hundred fifty six thousand seven hundred ninety two\n",
+      "123456793 one hundred twenty three million four hundred fifty six thousand seven hundred ninety three\n",
+      "123456794 one hundred twenty three million four hundred fifty six thousand seven hundred ninety four\n",
+      "123456795 one hundred twenty three million four hundred fifty six thousand seven hundred ninety five\n",
+      "123456796 one hundred twenty three million four hundred fifty six thousand seven hundred ninety six\n",
+      "123456797 one hundred twenty three million four hundred fifty six thousand seven hundred ninety seven\n",
+      "123456798 one hundred twenty three million four hundred fifty six thousand seven hundred ninety eight\n"
      ]
     }
    ],
    "source": [
-    "for i in range(983123452346781, 983123452346789):\n",
-    "    value = num_to_word(i)\n",
+    "for i in range(123456789, 123456799):\n",
+    "    value = currency_to_word(i)\n",
     "    print(i, value)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
