--- a/work/Create-Voucher/currency-to-word.ipynb
+++ b/work/Create-Voucher/currency-to-word.ipynb
@@ -69,6 +69,9 @@
    "outputs": [],
    "source": [
     "def currency_to_word(num):\n",
+    "    decimal = round(num - int(num), 2)\n",
+    "    if decimal:\n",
+    "        return ' '.join([currency_to_word(int(num)), 'and cents', currency_to_word(decimal * 100), 'only'])\n",
     "    num_digit = len(str(num))\n",
     "    power = (num_digit - 1) // 3\n",
     "    if num < 20:\n",
@@ -87,26 +90,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "123456789 one hundred twenty three million four hundred fifty six thousand seven hundred eighty nine\n",
-      "123456790 one hundred twenty three million four hundred fifty six thousand seven hundred ninety \n",
-      "123456791 one hundred twenty three million four hundred fifty six thousand seven hundred ninety one\n",
-      "123456792 one hundred twenty three million four hundred fifty six thousand seven hundred ninety two\n",
-      "123456793 one hundred twenty three million four hundred fifty six thousand seven hundred ninety three\n",
-      "123456794 one hundred twenty three million four hundred fifty six thousand seven hundred ninety four\n",
-      "123456795 one hundred twenty three million four hundred fifty six thousand seven hundred ninety five\n",
-      "123456796 one hundred twenty three million four hundred fifty six thousand seven hundred ninety six\n",
-      "123456797 one hundred twenty three million four hundred fifty six thousand seven hundred ninety seven\n",
-      "123456798 one hundred twenty three million four hundred fifty six thousand seven hundred ninety eight\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'nine million eight hundred seventy six thousand five hundred forty three and cents twenty one only'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(123456789, 123456799):\n",
-    "    value = currency_to_word(i)\n",
-    "    print(i, value)"
+    "currency_to_word(9876543.21)"
    ]
   },
   {
