--- a/work/Split-PDF/test.ipynb
+++ b/work/Split-PDF/test.ipynb
@@ -79,10 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('c:/Users/syenl/Desktop/Python-Tools/work/Split-PDF/input/sample_file_0-1')"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_path.with_suffix('')"
+   ]
   },
   {
    "cell_type": "code",
