--- a/work/Create-Voucher/num-to-word.ipynb
+++ b/work/Create-Voucher/num-to-word.ipynb
@@ -68,20 +68,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def currency_to_word(num):\n",
+    "def num_to_word(num):\n",
     "    decimal = round(num - int(num), 2)\n",
     "    if decimal:\n",
-    "        return ' '.join([currency_to_word(int(num)), 'and cents', currency_to_word(decimal * 100), 'only'])\n",
+    "        return ' '.join([num_to_word(int(num)), 'and cents', num_to_word(decimal * 100), 'only'])\n",
     "    num_digit = len(str(num))\n",
     "    power = (num_digit - 1) // 3\n",
     "    if num < 20:\n",
     "        return num_under_20[num]\n",
     "    elif num < 100:\n",
-    "        return ' '.join([num_under_100[num // 10], currency_to_word(num % 10)])\n",
+    "        return ' '.join([num_under_100[num // 10], num_to_word(num % 10)])\n",
     "    elif num < 1000:\n",
-    "        return ' '.join([currency_to_word(num // 100), 'hundred', currency_to_word(num % 100)])\n",
+    "        return ' '.join([num_to_word(num // 100), 'hundred', num_to_word(num % 100)])\n",
     "    elif power < 5:\n",
-    "        return ' '.join([currency_to_word(num // 1000 ** power), num_above_1000[power], currency_to_word(num % 1000 ** power)])"
+    "        return ' '.join([num_to_word(num // 1000 ** power), num_above_1000[power], num_to_word(num % 1000 ** power)])"
    ]
   },
   {
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "currency_to_word(9876543.21)"
+    "num_to_word(9876543.21)"
    ]
   },
   {
