--- a/work/Create-Voucher/num-to-word.ipynb
+++ b/work/Create-Voucher/num-to-word.ipynb
@@ -71,7 +71,7 @@
     "def num_to_word(num):\n",
     "    decimal = round(num - int(num), 2)\n",
     "    if decimal:\n",
-    "        return ' '.join([num_to_word(int(num)), 'and cents', num_to_word(decimal * 100), 'only'])\n",
+    "        return ' '.join([num_to_word(int(num)), 'and cents', num_to_word(int(decimal * 100)), 'only'])\n",
     "    num_digit = len(str(num))\n",
     "    power = (num_digit - 1) // 3\n",
     "    if num < 20:\n",
@@ -88,20 +88,99 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4347445.23\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "'nine million eight hundred seventy six thousand five hundred forty three and cents twenty one only'"
+       "'four million three hundred forty seven thousand four hundred forty five and cents twenty three only'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_to_word(9876543.21)"
+    "number = random.randint(100000000, 999999999) / 100\n",
+    "print(number)\n",
+    "text = num_to_word(number)\n",
+    "' '.join([item for item in text.split(' ') if item])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9761135.72\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'nine million seven hundred sixty one thousand one hundred thirty five and cents seventy two only'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = random.randint(100000000, 999999999) / 100\n",
+    "print(number)\n",
+    "text = num_to_word(number)\n",
+    "' '.join([item for item in text.split(' ') if item])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1635978.56\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'one million six hundred thirty five thousand nine hundred seventy eight and cents fifty six only'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = random.randint(100000000, 999999999) / 100\n",
+    "print(number)\n",
+    "text = num_to_word(number)\n",
+    "' '.join([item for item in text.split(' ') if item])"
    ]
   },
   {
