--- a/work/Create-Voucher/test.ipynb
+++ b/work/Create-Voucher/test.ipynb
@@ -60,58 +60,22 @@
     "file_path = 'template.docx'\n",
     "doc = Document(file_path)\n",
     "table = doc.tables[0]\n",
-    "for row in table.rows:\n",
-    "    for item in row.cells:\n",
+    "rows = list(table.rows)\n",
+    "for row in rows:\n",
+    "    items = list(row.cells)\n",
+    "    for item in items:\n",
     "        pattern = r'\\$\\{(.*?)\\}'\n",
     "        result = re.findall(pattern, item.text)\n",
     "        if result:\n",
     "            key = result[0]\n",
     "            value = data[key]\n",
-    "            for index, run in enumerate(item.paragraphs[0].runs):\n",
+    "            runs = list(item.paragraphs[0].runs)\n",
+    "            for index, run in enumerate(runs):\n",
     "                if index == 0:\n",
     "                    run.text = value\n",
     "                else:\n",
     "                    run.text = ''\n",
-    "doc.save('output1.docx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path = 'template.docx'\n",
-    "doc = Document(file_path)\n",
-    "table = doc.tables[0]\n",
-    "rows = table.rows\n",
-    "for row in rows:\n",
-    "    items = row.cells\n",
-    "    for item in items:\n",
-    "        pattern = r'\\$\\{(.*?)\\}'\n",
-    "        result = re.findall(pattern, item.text)\n",
-    "        if result:\n",
-    "            runs = item.paragraphs[0].runs\n",
-    "            for index, run in enumerate(runs):\n",
-    "                if index == 0:\n",
-    "                    key = result[0]\n",
-    "                    run.text = data[key]\n",
-    "                else:\n",
-    "                    run.text = ''\n",
-    "doc.save('output2.docx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from python_docx_replace import docx_replace\n",
-    "file_path = 'template.docx'\n",
-    "doc = Document(file_path)\n",
-    "docx_replace(doc, **data)\n",
-    "doc.save('output3.docx')"
+    "doc.save('output.docx')"
    ]
   },
   {
