--- a/work/Create-Voucher/test.ipynb
+++ b/work/Create-Voucher/test.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,87 +88,85 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_path = Path.cwd() / 'temp'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_list = list(temp_path.iterdir())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_path = Path.cwd() / 'input'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_list = list(input_path.iterdir())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Date',\n",
-       " 'Voucher',\n",
-       " 'Account1',\n",
-       " 'Particular1',\n",
-       " 'Debit1',\n",
-       " 'Credit1',\n",
-       " 'Account2',\n",
-       " 'Particular2',\n",
-       " 'Debit2',\n",
-       " 'Credit2',\n",
-       " 'Account3',\n",
-       " 'Particular3',\n",
-       " 'Debit3',\n",
-       " 'Credit3',\n",
-       " 'Account4',\n",
-       " 'Particular4',\n",
-       " 'Debit4',\n",
-       " 'Credit4',\n",
-       " 'Account5',\n",
-       " 'Particular5',\n",
-       " 'Debit5',\n",
-       " 'Credit5',\n",
-       " 'Account6',\n",
-       " 'Particular6',\n",
-       " 'Debit6',\n",
-       " 'Credit6',\n",
-       " 'Account7',\n",
-       " 'Particular7',\n",
-       " 'Debit7',\n",
-       " 'Credit7',\n",
-       " 'Account8',\n",
-       " 'Particular8',\n",
-       " 'Debit8',\n",
-       " 'Credit8',\n",
-       " 'Account9',\n",
-       " 'Particular9',\n",
-       " 'Debit9',\n",
-       " 'Credit9',\n",
-       " 'Account10',\n",
-       " 'Particular10',\n",
-       " 'Debit10',\n",
-       " 'Credit10',\n",
-       " 'Account11',\n",
-       " 'Particular11',\n",
-       " 'Debit11',\n",
-       " 'Credit11',\n",
-       " 'Account12',\n",
-       " 'Particular12',\n",
-       " 'Debit12',\n",
-       " 'Credit12',\n",
-       " 'DebitTotal',\n",
-       " 'CreditTotal']"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "journal-voucher.docx\n",
+      "Date\n",
+      "Voucher\n",
+      "Account1\n",
+      "Particular1\n",
+      "Debit1\n",
+      "Credit1\n",
+      "Account2\n",
+      "Particular2\n",
+      "Debit2\n",
+      "Credit2\n",
+      "Account3\n",
+      "Particular3\n",
+      "Debit3\n",
+      "Credit3\n",
+      "Account4\n",
+      "Particular4\n",
+      "Debit4\n",
+      "Credit4\n",
+      "Account5\n",
+      "Particular5\n",
+      "Debit5\n",
+      "Credit5\n",
+      "Account6\n",
+      "Particular6\n",
+      "Debit6\n",
+      "Credit6\n",
+      "Account7\n",
+      "Particular7\n",
+      "Debit7\n",
+      "Credit7\n",
+      "Account8\n",
+      "Particular8\n",
+      "Debit8\n",
+      "Credit8\n",
+      "Account9\n",
+      "Particular9\n",
+      "Debit9\n",
+      "Credit9\n",
+      "Account10\n",
+      "Particular10\n",
+      "Debit10\n",
+      "Credit10\n",
+      "Account11\n",
+      "Particular11\n",
+      "Debit11\n",
+      "Credit11\n",
+      "Account12\n",
+      "Particular12\n",
+      "Debit12\n",
+      "Credit12\n",
+      "DebitTotal\n",
+      "CreditTotal\n"
+     ]
     }
    ],
    "source": [
@@ -185,53 +183,53 @@
     "        if result:\n",
     "            if result[0] not in results:\n",
     "                results.append(result[0])\n",
-    "results"
+    "print(file_path.name)\n",
+    "for result in results:\n",
+    "    print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Date',\n",
-       " 'Voucher',\n",
-       " 'Payee',\n",
-       " 'Ringgit',\n",
-       " 'Account1',\n",
-       " 'Particular1',\n",
-       " 'Amount1',\n",
-       " 'Account2',\n",
-       " 'Particular2',\n",
-       " 'Amount2',\n",
-       " 'Account3',\n",
-       " 'Particular3',\n",
-       " 'Amount3',\n",
-       " 'Account4',\n",
-       " 'Particular4',\n",
-       " 'Amount4',\n",
-       " 'Account5',\n",
-       " 'Particular5',\n",
-       " 'Amount5',\n",
-       " 'Account6',\n",
-       " 'Particular6',\n",
-       " 'Amount6',\n",
-       " 'Account7',\n",
-       " 'Particular7',\n",
-       " 'Amount7',\n",
-       " 'Account8',\n",
-       " 'Particular8',\n",
-       " 'Amount8',\n",
-       " 'Total',\n",
-       " 'Method',\n",
-       " 'Reference']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "payment-voucher.docx\n",
+      "Date\n",
+      "Voucher\n",
+      "Payee\n",
+      "Ringgit\n",
+      "Account1\n",
+      "Particular1\n",
+      "Amount1\n",
+      "Account2\n",
+      "Particular2\n",
+      "Amount2\n",
+      "Account3\n",
+      "Particular3\n",
+      "Amount3\n",
+      "Account4\n",
+      "Particular4\n",
+      "Amount4\n",
+      "Account5\n",
+      "Particular5\n",
+      "Amount5\n",
+      "Account6\n",
+      "Particular6\n",
+      "Amount6\n",
+      "Account7\n",
+      "Particular7\n",
+      "Amount7\n",
+      "Account8\n",
+      "Particular8\n",
+      "Amount8\n",
+      "Total\n",
+      "Method\n",
+      "Reference\n"
+     ]
     }
    ],
    "source": [
@@ -248,53 +246,53 @@
     "        if result:\n",
     "            if result[0] not in results:\n",
     "                results.append(result[0])\n",
-    "results"
+    "print(file_path.name)\n",
+    "for result in results:\n",
+    "    print(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Date',\n",
-       " 'Voucher',\n",
-       " 'Payer',\n",
-       " 'Ringgit',\n",
-       " 'Account1',\n",
-       " 'Particular1',\n",
-       " 'Amount1',\n",
-       " 'Account2',\n",
-       " 'Particular2',\n",
-       " 'Amount2',\n",
-       " 'Account3',\n",
-       " 'Particular3',\n",
-       " 'Amount3',\n",
-       " 'Account4',\n",
-       " 'Particular4',\n",
-       " 'Amount4',\n",
-       " 'Account5',\n",
-       " 'Particular5',\n",
-       " 'Amount5',\n",
-       " 'Account6',\n",
-       " 'Particular6',\n",
-       " 'Amount6',\n",
-       " 'Account7',\n",
-       " 'Particular7',\n",
-       " 'Amount7',\n",
-       " 'Account8',\n",
-       " 'Particular8',\n",
-       " 'Amount8',\n",
-       " 'Total',\n",
-       " 'Method',\n",
-       " 'Reference']"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "receipt-voucher.docx\n",
+      "Date\n",
+      "Voucher\n",
+      "Payer\n",
+      "Ringgit\n",
+      "Account1\n",
+      "Particular1\n",
+      "Amount1\n",
+      "Account2\n",
+      "Particular2\n",
+      "Amount2\n",
+      "Account3\n",
+      "Particular3\n",
+      "Amount3\n",
+      "Account4\n",
+      "Particular4\n",
+      "Amount4\n",
+      "Account5\n",
+      "Particular5\n",
+      "Amount5\n",
+      "Account6\n",
+      "Particular6\n",
+      "Amount6\n",
+      "Account7\n",
+      "Particular7\n",
+      "Amount7\n",
+      "Account8\n",
+      "Particular8\n",
+      "Amount8\n",
+      "Total\n",
+      "Method\n",
+      "Reference\n"
+     ]
     }
    ],
    "source": [
@@ -311,8 +309,17 @@
     "        if result:\n",
     "            if result[0] not in results:\n",
     "                results.append(result[0])\n",
-    "results"
+    "print(file_path.name)\n",
+    "for result in results:\n",
+    "    print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
